# news-site

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml
backend/: Cargo.toml
backend/cli/: Cargo.toml
backend/cli/src/: client.rs  config.rs  main.rs
backend/cli/src/commands/: article.rs  cache.rs  category.rs  mod.rs  page.rs  settings.rs  tag.rs
backend/common/: Cargo.toml
backend/common/src/: lib.rs
backend/migrations/: 001_categories.sql  002_tags.sql  003_articles.sql  004_article_tags.sql  005_pages.sql  006_settings.sql
backend/server/: Cargo.toml
backend/server/src/: config.rs  error.rs  lib.rs  main.rs
backend/server/src/api/: mod.rs
backend/server/src/api/manage/: articles.rs  cache.rs  categories.rs  mod.rs  pages.rs  settings.rs  tags.rs
backend/server/src/api/public/: articles.rs  categories.rs  mod.rs  pages.rs  settings.rs  tags.rs
backend/server/src/cache/: keys.rs  mod.rs
backend/server/src/db/: articles.rs  categories.rs  mod.rs  pages.rs  settings.rs  tags.rs
backend/server/src/db/db/: articles.rs  mod.rs
backend/server/tests/: articles_manage.rs  articles_public.rs  categories.rs  pages.rs  settings.rs  tags.rs
backend/server/tests/common/: mod.rs
docs/superpowers/plans/: 2026-06-02-news-site-phase1-backend.md  2026-06-02-news-site-phase2-cli.md  (+2 more)
frontend/: next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/e2e/: article.spec.ts  homepage.spec.ts  mock-api.ts  start-servers.sh
frontend/src/app/: layout.tsx  (+1 more)
(+22 files in other folders)
